Bug Fixing - Fixed invisible discord logo - Fixed unclickable WG logo

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -202,8 +202,8 @@ a {
 }
 
 /* On hover, brighten it up */
-#wg-logo-wrapper-main:hover #wg-logo{
-  filter: brightness(1.1);
+#wg-logo:hover{
+  filter: brightness(100);
 }
 
 //Games dropdown
